FIX: excerpt overflow and children click events
This commit prevents long links to overflow the container and also prevents click on the thread to open a link displayed in the excerpt, we only want to open the thread.

--- a/plugins/chat/assets/stylesheets/common/chat-thread-original-message.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-thread-original-message.scss
@@ -8,6 +8,11 @@
 
   &__excerpt {
     padding-bottom: 0.25rem;
+    word-break: break-all;
+
+    > * {
+      pointer-events: none;
+    }
   }
 
   &__author {
